test/langtools/tools/javac/cantReferenceBeforeCtor/CantReferenceBeforeConstructorTest.out
CantReferenceBeforeConstructorTest.java:30:13: compiler.err.cant.ref.before.ctor.called: this
1 error
